# PrivStack-IO

./: .env.example  .gitignore  README.md  build.sh  docker-compose.test.yml
.github/: dependabot.yml
.github/workflows/: build-windows.yml
bridge/PrivStack.Bridge/: PrivStack.Bridge.csproj  Program.cs
bridge/PrivStack.Bridge/Models/: BridgeMessage.cs
bridge/PrivStack.Bridge/Protocol/: NativeMessageReader.cs  NativeMessageWriter.cs  PipeClient.cs
core/: Cargo.toml
core/privstack-blobstore/src/: lib.rs
core/privstack-cloud/: Cargo.toml
core/privstack-cloud/src/: api_client.rs  blob_sync.rs  compaction.rs  config.rs  credential_manager.rs  dek_registry.rs  envelope.rs  error.rs  lib.rs  outbox.rs  s3_transport.rs  sharing.rs  sync_engine.rs  types.rs
core/privstack-cloud/tests/: api_client_tests.rs  compaction_tests.rs  config_tests.rs  credential_manager_tests.rs  cross_verify_integration.rs  crypto_adversarial_tests.rs  dek_registry_tests.rs  envelope_tests.rs  error_tests.rs  outbox_adversarial_tests.rs  outbox_tests.rs  pipeline_integration.rs  protocol_e2e.rs  s3_integration.rs  types_tests.rs
core/privstack-cloud/tests/support/: mod.rs
core/privstack-crypto/: Cargo.toml
core/privstack-crypto/src/: envelope.rs  lib.rs  recovery.rs
core/privstack-crypto/tests/: envelope_tests.rs
core/privstack-datasets/: Cargo.toml
core/privstack-datasets/src/: error.rs  lib.rs  schema.rs  types.rs
core/privstack-datasets/src/store/: crud.rs  helpers.rs  mod.rs  mutations.rs  preprocessor.rs  query.rs  relations.rs  row_pages.rs  saved_queries.rs  views.rs
core/privstack-ffi/: Cargo.toml
core/privstack-ffi/src/: lib.rs
core/privstack-ffi/src/android_jni/: auth.rs  cloud.rs  core.rs  misc.rs  mod.rs  pairing.rs  sync.rs  vault.rs
core/privstack-ffi/src/cloud/: auth.rs  blobs.rs  devices.rs  mod.rs  sharing.rs  sync.rs  workspaces.rs
core/privstack-ffi/src/datasets/: crud.rs  mod.rs  mutations.rs  queries.rs  relations.rs  row_pages.rs  views.rs
core/privstack-license/: Cargo.toml
core/privstack-license/src/: activation.rs
core/privstack-license/tests/: activation_tests.rs
core/privstack-plugin-host/: Cargo.toml
core/privstack-plugin-host/src/: host_impl.rs
core/privstack-plugin-sdk/: Cargo.toml
core/privstack-ppk/: Cargo.toml
core/privstack-storage/: Cargo.toml
core/privstack-storage/src/: entity_store.rs  event_store.rs  lib.rs
core/privstack-storage/tests/: entity_store_tests.rs
core/privstack-sync/: Cargo.toml
core/privstack-sync/src/: orchestrator.rs  policy.rs
core/privstack-sync/tests/: adversarial_network_tests.rs  e2e_bridge_tests.rs  e2e_relay_tests.rs  orchestrator_tests.rs  personal_sharing_tests.rs  policy_store_tests.rs  policy_tests.rs
core/privstack-vault/src/: lib.rs  recovery.rs
desktop/: Directory.Build.props
desktop/PrivStack.Desktop/: AiPersona.cs  App.axaml  App.axaml.cs  PrivStack.Desktop.csproj  ViewLocator.cs
desktop/PrivStack.Desktop.Tests/: PrivStack.Desktop.Tests.csproj
desktop/PrivStack.Desktop.Tests/Models/: CloudSyncModelsTests.cs
desktop/PrivStack.Desktop.Tests/Sdk/: ShareableBehaviorTests.cs
desktop/PrivStack.Desktop.Tests/Services/: CloudSyncServiceTests.cs
desktop/PrivStack.Desktop.Tests/ViewModels/: CloudSyncSettingsViewModelTests.cs  StorageStatePillCloudTests.cs  SyncViewModelTests.cs
desktop/PrivStack.Desktop/Controls/: HtmlContentControl.cs  Icons.cs  PropertyEditorControl.axaml  PropertyEditorControl.axaml.cs  UniversalSearchDropdown.axaml  UniversalSearchDropdown.axaml.cs
desktop/PrivStack.Desktop/Models/: AppRelease.cs  CloudSyncModels.cs  CustomTheme.cs  DatasetSidecar.cs  FileEventEnvelope.cs  FileEventSyncState.cs  LicenseModels.cs  PropertyDefinition.cs  StorageLocation.cs  SyncModels.cs  SyncSnapshot.cs  SyncSnapshotData.cs  Workspace.cs
desktop/PrivStack.Desktop/Native/: DatasetNativeLibrary.cs  IAuthService.cs  ICloudSyncService.cs  NativeLibrary.cs  PrivStackError.cs  PrivStackService.cs
desktop/PrivStack.Desktop/Sdk/: CapabilityBroker.cs  LocalStorageProvider.cs  PluginHost.cs  PluginHostFactory.cs  SdkDialogServiceAdapter.cs  SdkHost.cs
desktop/PrivStack.Desktop/Services/: AiSuggestionServiceImpl.cs  AppSettings.cs  AudioRecorderService.cs  BacklinkService.cs  BackupService.cs  CloudPathResolver.cs  CloudSyncService.cs  CustomThemeStore.cs  DataPaths.cs  DatasetService.Mutations.cs  DatasetService.SqlV2.cs  DatasetService.cs  DialogService.cs  EntityMetadataService.cs  EntityTypeMap.cs  FontScaleService.cs  LicenseExpirationService.cs  Log.cs  MasterPasswordCache.cs  NativeMessagingRegistrar.cs  NetworkPathDetector.cs  OAuthLoginService.cs  PlatformDetector.cs  PrivStackApiClient.cs  QuickActionService.cs  ReminderSchedulerService.cs  SeedDataService.cs  ServiceRegistration.cs  SubscriptionValidationService.cs  SyncOutboundService.cs  SystemNotificationService.cs  ThemeService.cs  ToastService.cs  UniversalSearchService.cs  WhisperModelManager.cs  WhisperService.cs  WorkspaceDataMigration.cs  WorkspaceMigrationProgress.cs  WorkspaceService.cs
desktop/PrivStack.Desktop/Styles/: PrivStackTheme.axaml
desktop/PrivStack.Desktop/ViewModels/: CloudSyncSettingsViewModel.cs  CommandPaletteViewModel.cs  ConnectionsViewModel.cs  InfoPanelViewModel.cs  IntentSlotEditorViewModel.cs  IntentSuggestionCardViewModel.cs  IntentSuggestionTrayViewModel.cs  MainWindowViewModel.cs  PropertyTemplateDialogViewModel.cs  PropertyValueViewModel.cs  RecoveryViewModel.cs  SettingsViewModel.AI.cs  SettingsViewModel.EmergencyKit.cs  SettingsViewModel.cs  SetupWizardViewModel.EmergencyKit.cs  (+8 more)
desktop/PrivStack.Sdk/: ICapabilityBroker.cs  IConnectionService.cs  IPluginHost.cs  IPrivStackSdk.cs  IPropertyService.cs  ISdkDialogService.cs  IToastService.cs  PluginBase.cs  PluginMetadata.cs  PluginTypes.cs  PrivStack.Sdk.csproj  README.md
desktop/PrivStack.UI.Adaptive/: AdaptiveViewRenderer.cs  HtmlContentParser.cs  PrivStack.UI.Adaptive.csproj  README.md
wiki/: architecture.md  crdts.md  cryptography.md  entity-model.md  ffi.md  relay.md  sdks.md  storage.md  sync-engine.md
(+220 files in other folders)
