[package]
name = "privstack-crypto"
description = "Encryption layer for PrivStack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
privstack-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"

# Envelope encryption (cloud sync sharing)
crypto_box = "0.9"
bip39 = { version = "2", default-features = false }

[dev-dependencies]
proptest.workspace = true
