[package]
name = "privstack-license"
description = "Licensing and activation for PrivStack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
hostname = "0.4"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

[features]
default = []
# Enable online activation (requires network)
online = ["reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.25"
rand = "0.8"
