[package]
name = "privstack-plugin-sdk"
description = "Guest SDK for building PrivStack Wasm plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wit-bindgen = { version = "0.51", default-features = false }
serde.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
