[package]
name = "privstack-ppk"
description = "PrivStack Plugin Package (.ppk) format — packaging, signing, and verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Package format
toml = "0.8"
zip = "6.0"
sha2 = "0.10"
hex = "0.4"

# Ed25519 signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
