[package]
name = "privstack-storage"
description = "DuckDB storage layer for PrivStack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
privstack-types.workspace = true
privstack-crypto.workspace = true
privstack-crdt.workspace = true
privstack-model.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono = "0.4"
uuid = { workspace = true }

# Database
duckdb.workspace = true

[dev-dependencies]
tempfile = "3.25"
